--- a/client/src/menu.html
+++ b/client/src/menu.html
@@ -1,4 +1,5 @@
 <nav class="menu-main btn-group-vertical">
   <a href="#/reserve" class="btn btn-default">REZERVOVAT</a>
   <a href="#/existing" class="btn btn-default">STÁVAJÍCÍ</a>
+  <a href="#/cars" ng-show="showCarsButton" class="btn btn-default">AUTA</a>
 </nav>
